--- a/source/template/index.pug
+++ b/source/template/index.pug
@@ -8,3 +8,5 @@ html(lang='ru')
         title houses
     body
         include sections/header
+        include sections/technology
+        include sections/advantages.pug
