--- a/source/template/sections/advantages.pug
+++ b/source/template/sections/advantages.pug
@@ -1,12 +1,34 @@
 section.advantages
   .container
-    .row
-      span.pixel1 some text
-      span.pixel2 some text
-      span.pixel3 some text
-      span.pixel4 some text
-    .row
-      span.rem_1 some text
-      span.rem_2 some text
-      span.rem_3 some text
-      span.rem_4 some text
+    h1.title преимущества модульной технологии
+    .advantages-container  
+      .advantages-item
+        .advantages-item__img.advantages-item__img_icon1
+        .advantages-item-text
+          h3.advantages-item-text__title Качество
+          p.advantages-item-text__description Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt cabo
+      .advantages-item
+        .advantages-item__img.advantages-item__img_icon2
+        .advantages-item-text
+          h3.advantages-item-text__title Скорость
+          p.advantages-item-text__description Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt cabo
+      .advantages-item
+        .advantages-item__img.advantages-item__img_icon3
+        .advantages-item-text
+          h3.advantages-item-text__title Доступность
+          p.advantages-item-text__description Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt cabo    
+      .advantages-item
+        .advantages-item__img.advantages-item__img_icon4
+        .advantages-item-text
+          h3.advantages-item-text__title Гибкость
+          p.advantages-item-text__description Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt cabo
+      .advantages-item
+        .advantages-item__img.advantages-item__img_icon5
+        .advantages-item-text
+          h3.advantages-item-text__title Изменяемость
+          p.advantages-item-text__description Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt cabo
+      .advantages-item
+        .advantages-item__img.advantages-item__img_icon6
+        .advantages-item-text
+          h3.advantages-item-text__title Дизайн
+          p.advantages-item-text__description Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt cabo
