Section advantages was added

--- a/source/styles/global/vars.sass
+++ b/source/styles/global/vars.sass
@@ -6,7 +6,7 @@ $gutter: 30px
 // fonts
 
 $regular: "OpenSans"
-$extarbold: "OpenSans-Extrabold"
+$extrabold: "OpenSans-Extrabold"
 $light: "OpenSans-Light"
 $lightItalic: "OpenSansLight-Italic"
 
