--- a/source/styles/sections/button.sass
+++ b/source/styles/sections/button.sass
@@ -1,6 +1,6 @@
 .btn
   @include rem(15px)
-  font-family: $extarbold
+  font-family: $extrabold
   text-align: center
   display: inline-block
   text-transform: uppercase
