--- a/source/styles/sections/header.sass
+++ b/source/styles/sections/header.sass
@@ -7,7 +7,7 @@
     @include col(8)
     text-align: center
     margin: 176px auto 56px
-    font-family: $extarbold
+    font-family: $extrabold
     @include rem(58px)
     text-transform: uppercase
     letter-spacing: 5px
@@ -30,7 +30,7 @@
 
   &__link
     color: $colorWhite
-    font-family: $extarbold
+    font-family: $extrabold
     font-size: 13px
     text-transform: uppercase
     margin: 13px 30px 13px 0
@@ -56,8 +56,7 @@
 
   &__number
     @include rem(17px)
-    font-family: $extarbold
-
+    font-family: $extrabold
 
   &__btn
     display: inline-block
@@ -73,9 +72,6 @@
 
     i
       margin-right: 10px
-
-
-
 
 .buttons
   text-align: center
