--- a/source/styles/sections/technology.sass
+++ b/source/styles/sections/technology.sass
@@ -24,7 +24,7 @@
     text-align: center
     width: 196px
     @include rem(20px)
-    font-family: $extarbold
+    font-family: $extrabold
     text-transform: uppercase
     line-height: 2.35
     position: relative
