--- a/source/styles/sections/title.sass
+++ b/source/styles/sections/title.sass
@@ -4,7 +4,7 @@
   margin: 0
   padding-bottom: 36px
   text-transform: uppercase
-  font-family: $extarbold
+  font-family: $extrabold
   position: relative
 
   &:after
