Section projects was added

--- a/source/template/index.pug
+++ b/source/template/index.pug
@@ -9,4 +9,5 @@ html(lang='ru')
     body
         include sections/header
         include sections/technology
-        include sections/advantages.pug
+        include sections/advantages
+        include sections/projects
